...
          <Button
            onPress={() => selectLanguage("es")}
            style={[
              styles.languageButton,
              selectedLang === "es" && styles.selected,
            ]}
            testID="esButton"
          >
            <View style={styles.labelContainer}>
              <Image
                source={require("@/assets/images/flags/es.png")}
                style={styles.image}
              />
...
              />
            )}
          </Button>
        </View>
      </View>

      <Button disabled={!selectedLang} onPress={onNext} testID="nextButton">
        {t("common.next")}
      </Button>
    </View>
  );
}

...
