...
          }}
        />

        <View style={styles.actionsContainer}>
          <Button
            onPress={() => router.push("/preferences")}
            testID="startButton"
          >
            {t("onboarding.welcome.start")}
          </Button>
          <Button onPress={() => router.push("/sign-in")} variant="inverse">
            {t("onboarding.welcome.alreadyHaveAccount")}
          </Button>
...
