...
    });
  }

  return (
    <Pressable
      onPress={handleShowDeleteConfirmation}
      testID="settings-delete-account"
    >
      <Card style={styles.item}>
        <View style={styles.content}>
          <View style={styles.iconContainer}>
            <Octicons color={"#fff"} name={"trash"} size={16} />
          </View>
...
