...
            onPress={
              session?.user?.isAnonymous
                ? handleDeleteAnonymousAccount
                : handleDeleteAccount
            }
            style={styles.footerAction}
            testID="settings-confirm-delete-account"
            variant="danger"
          >
            {isLoading ? (
              <ActivityIndicator color={"#ffffff"} size="small" />
            ) : (
              t("options.settings.deleteConfirmation.confirm")
...
