...
        <Button
          aria-label="Close modal"
          disabled={disableCloseButton}
          hitSlop={8}
          onPress={handleDismiss}
          style={styles.closeButton}
          testID="detached-modal-header-close"
        >
          <Octicons color={THEME.foreground} name="x" size={22} />
        </Button>
      )}
    </View>
  );
...
